--- a/docker/ci-wheel/install-cuda-11.8
+++ b/docker/ci-wheel/install-cuda-11.8
@@ -8,12 +8,9 @@
 
 set -o errexit
 
-yum --assumeyes install\
-    devtoolset-9-gcc\
-    devtoolset-9-gcc-c++\
-    devtoolset-9-libasan-devel\
-    devtoolset-9-liblsan-devel\
-    devtoolset-9-libubsan-devel\
-    devtoolset-9-libtsan-devel
+curl --location --fail --output cuda.run\
+    https://developer.download.nvidia.com/compute/cuda/11.8.0/local_installers/cuda_11.8.0_520.61.05_linux.run
 
-yum clean all
+sh cuda.run --silent --toolkit --override --no-man-page
+
+rm cuda.run
